--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "google-auth-library": "^9.4.2",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-sharp-s3": "^0.2.5",
